FIX: Fix UI styles for IE11 compatibility
1. Add Scrollbar style on IE11
2. Fix multiple flex issues on IE11

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -66,7 +66,7 @@ input {
   }
 
   input {
-    flex: 1 1 auto;
+    flex: 1 1 0px;  // IE11 Hack: give flex-basis specific px or %
     min-width: 0px;
     padding: 4px 8px;
     padding-right: 0px;
