--- a/src/assets/styles/variable.scss
+++ b/src/assets/styles/variable.scss
@@ -274,6 +274,16 @@ $success-color: #5cd29d;
   &::-webkit-scrollbar-thumb:hover {
     background-color: #c3c3c3; 
   }
+
+  // IE 
+  scrollbar-base-color: rgba(255, 255, 255, 0);
+  scrollbar-face-color: #cccccc;
+  scrollbar-3dlight-color: rgba(255, 255, 255, 0);
+  scrollbar-highlight-color: rgba(255, 255, 255, 0);
+  scrollbar-track-color: rgba(255, 255, 255, 0);
+  scrollbar-arrow-color: #cccccc;
+  scrollbar-shadow-color: rgba(255, 255, 255, 0);
+  scrollbar-dark-shadow-color: rgba(255, 255, 255, 0);
 }
 
 @mixin customXScrollbar() {
